added more resources

--- a/resources/index.html
+++ b/resources/index.html
@@ -27,6 +27,10 @@ title: Resources
     <ul>
         <li><a href="https://guif.re/webtesting">https://guif.re/webtesting</a></li>
     </ul>
+    <h2>Wireless</h2>
+    <ul>
+        <li><a href="https://www.aircrack-ng.org/doku.php?id=cracking_wpa">https://www.aircrack-ng.org/doku.php?id=cracking_wpa</a></li>
+    </ul>
     <h2>Tools</h2>
     <ul>
         <li><a href="https://github.com/worawit/MS17-010">https://github.com/worawit/MS17-010</a></li>
@@ -34,4 +38,3 @@ title: Resources
         <li><a href="https://www.exploit-db.com/">https://www.exploit-db.com/</a></li>
     </ul>
 </div>
-
