added more resources

--- a/resources/index.html
+++ b/resources/index.html
@@ -27,6 +27,12 @@ title: Resources
     <ul>
         <li><a href="https://guif.re/webtesting">https://guif.re/webtesting</a></li>
     </ul>
+    <h2>Buffer Overflow</h2>
+    <ul>
+        <li><p>Vulnerable server for practice: </p><a href="https://github.com/stephenbradshaw/vulnserver">https://github.com/stephenbradshaw/vulnserver</a></li>
+        <li><p>Video for step by step: </p><a href="https://www.youtube.com/watch?v=qSnPayW6F7U&list=PLLKT__MCUeix3O0DPbmuaRuR_4Hxo4m3G">https://www.youtube.com/watch?v=qSnPayW6F7U&list=PLLKT__MCUeix3O0DPbmuaRuR_4Hxo4m3G</a></li>
+        <li><a href="http://netsec.ws/?p=180">http://netsec.ws/?p=180</a></li>
+    </ul>
     <h2>Wireless</h2>
     <ul>
         <li><a href="https://www.aircrack-ng.org/doku.php?id=cracking_wpa">https://www.aircrack-ng.org/doku.php?id=cracking_wpa</a></li>
