--- a/resources/index.html
+++ b/resources/index.html
@@ -32,6 +32,7 @@ title: Resources
         <li><a href="https://github.com/stephenbradshaw/vulnserver">https://github.com/stephenbradshaw/vulnserver</a></li>
         <li><a href="https://www.youtube.com/watch?v=qSnPayW6F7U&list=PLLKT__MCUeix3O0DPbmuaRuR_4Hxo4m3G">https://www.youtube.com/watch?v=qSnPayW6F7U&list=PLLKT__MCUeix3O0DPbmuaRuR_4Hxo4m3G</a></li>
         <li><a href="http://netsec.ws/?p=180">http://netsec.ws/?p=180</a></li>
+        <li><a href="https://dl.packetstormsecurity.net/papers/general/overflows_and_more.pdf">https://dl.packetstormsecurity.net/papers/general/overflows_and_more.pdf</a></li>
     </ul>
     <h2>Wireless</h2>
     <ul>
