Added more resources

--- a/resources/index.html
+++ b/resources/index.html
@@ -18,14 +18,21 @@ title: Resources
         <li><a href="https://www.fuzzysecurity.com/tutorials/16.html">https://www.fuzzysecurity.com/tutorials/16.html</a></li>
     </ul>
     <h2>Active Directory</h2>
+    <h3>Offense</h3>
     <ul>
         <li><a href="https://blog.harmj0y.net/">https://blog.harmj0y.net/</a></li>
         <li><a href="https://adsecurity.org/">https://adsecurity.org/</a></li>
         <li><a href="https://medium.com/@adam.toscher/top-five-ways-i-got-domain-admin-on-your-internal-network-before-lunch-2018-edition-82259ab73aaa">https://medium.com/@adam.toscher/top-five-ways-i-got-domain-admin-on-your-internal-network-before-lunch-2018-edition-82259ab73aaa</a></li>
     </ul>
+    <h3>Defense</h3>
+    <ul>
+      <li><a href="https://medium.com/blue-team/preventing-mimikatz-attacks-ed283e7ebdd5">https://medium.com/blue-team/preventing-mimikatz-attacks-ed283e7ebdd5</a></li>
+    </ul>
     <h2>Web App</h2>
     <ul>
         <li><a href="https://guif.re/webtesting">https://guif.re/webtesting</a></li>
+        <li><a href="https://www.apriorit.com/dev-blog/622-qa-web-application-pen-testing-owasp-checklist?utm_source=reddit&utm_medium=blog-july19">https://www.apriorit.com/dev-blog/622-qa-web-application-pen-testing-owasp-checklist?utm_source=reddit&utm_medium=blog-july19</a></li>
+        <li><a href="https://github.com/blabla1337/skf-labs">https://github.com/blabla1337/skf-labs</a></li>
     </ul>
     <h2>Buffer Overflow</h2>
     <ul>
