Added new tools

--- a/resources/index.html
+++ b/resources/index.html
@@ -50,5 +50,7 @@ title: Resources
         <li><a href="https://github.com/worawit/MS17-010">https://github.com/worawit/MS17-010</a></li>
         <li><a href="https://github.com/danielmiessler/SecLists">https://github.com/danielmiessler/SecLists</a></li>
         <li><a href="https://www.exploit-db.com/">https://www.exploit-db.com/</a></li>
+        <li><a href="https://github.com/zricethezav/gitleaks">https://github.com/zricethezav/gitleaks</a></li>
+        <li><a href="https://crt.sh/">https://crt.sh/</a></li>
     </ul>
 </div>
