--- a/osint/index.html
+++ b/osint/index.html
@@ -10,7 +10,7 @@ title: Resources
             <li><a href="https://www.google.com">Google</a></li>
             <li><a href="https://shodan.io">Shodan</a></li>
         </ul>
-        <li><a href="https://shodan.io">Shodan</a></li> is free, but it is very limited in the "free" mode. To really unlock the searchability aspect, you should sign up for a free account. If you want to search a LOT, I would recommend buying a membership.
+        <a href="https://shodan.io">Shodan</a> is free, but it is very limited in the "free" mode. To really unlock the searchability aspect, you should sign up for a free account. If you want to search a LOT, I would recommend buying a membership.
     </p>
     <h2>Google dorks</h2>
     <a href="https://www.exploit-db.com/google-hacking-database?author=10095">Exploit-DB GHDB</a>
