--- a/osint/index.html
+++ b/osint/index.html
@@ -9,28 +9,28 @@ title: OSINT
             <li><a href="https://shodan.io">Shodan</a></li>
         </ul>
         <a href="https://shodan.io">Shodan</a> is free, but it is very limited in the "free" mode. To really unlock the searchability aspect, you should sign up for a free account. If you want to search a LOT, I would recommend buying a membership.
-    <h2>Google dorks</h2>
+    <h3>Google dorks</h3>
     <a href="https://www.exploit-db.com/google-hacking-database?author=10095">Exploit-DB GHDB</a>
-    <h3>EdgeOS instances for Ubiquiti devices</h3>
+    EdgeOS instances for Ubiquiti devices
     <code>intitle:"EdgeOS" intext:"Please login"</code>
     Clickable: <a href="https://www.google.com/search?client=firefox-b-d&channel=trow&q=intitle%3A%22EdgeOS%22+intext%3A%22Please+login%22">intitle:"EdgeOS" intext:"Please login"</a>
-    <h3>Brocade switches</h3>
+    Brocade switches
     <code>intitle:"Web Management Login"</code>
     Clickable: <a href="https://www.google.com/search?client=firefox-b-d&channel=trow&q=intitle%3A%22Web+Management+Login%22">intitle:"Web Management Login"</a>
-    <h3>.pl login portals</h3>
+    .pl login portals
     <code>inurl:cgi/login.pl</code>
      Clickable: <a href="https://www.google.com/search?client=firefox-b-d&channel=trow&q=inurl%3Acgi%2Flogin.pl">inurl:cgi/login.pl</a>
-    <h3>Matrix Science database Instances</h3>
+    Matrix Science database Instances
     <code>inurl:cgi/login.pl intext:"Matrix Science"</code>
     Clickable: <a href="https://www.google.com/search?client=firefox-b-d&channel=trow&q=inurl%3Acgi%2Flogin.pl+intext%3A%22Matrix+Science%22">inurl:cgi/login.pl intext:"Matrix Science"</a>
-    <h2>Shodan queries</h2>
-    <h3>EdgeOS instances for Ubiquiti devices</h3>
+    <h3>Shodan queries</h3>
+    EdgeOS instances for Ubiquiti devices
     <code>http.favicon.hash:-1677255344</code>
     Clickable: <a href="https://www.shodan.io/search?query=http.favicon.hash%3A-1677255344">http.favicon.hash:-1677255344</a>
-    <h3>Infoblox login portals</h3>
+    Infoblox login portals
     <code>http.favicon.hash:-195335685</code>
     Clickable: <a href="https://www.shodan.io/search?query=http.favicon.hash%3A-195335685">http.favicon.hash:-195335685</a>
-    <h3>Brocade switches</h3>
+    Brocade switches
     <code>http.title:"Web Management Login"</code>
     Clickable: <a href="https://www.shodan.io/search?query=http.title%3A%22Web+Management+Login%22">http.title:"Web Management Login"</a>
 </div>
