Reformatted with headers

--- a/osint/index.html
+++ b/osint/index.html
@@ -4,55 +4,42 @@ title: OSINT
 ---
 <div class="about">
     <h1>Cool things on the internet...</h1>
+    <p>
         I love digging stuff up on the internet. Two things I really enjoy using for it are:
         <ul>
             <li><a href="https://www.google.com">Google</a></li>
             <li><a href="https://shodan.io">Shodan</a></li>
         </ul>
         <a href="https://shodan.io">Shodan</a> is free, but it is very limited in the "free" mode. To really unlock the searchability aspect, you should sign up for a free account. If you want to search a LOT, I would recommend buying a membership.
-    <h3>Google dorks</h3>
+    </p>
+    <h2>Google dorks</h2>
     <a href="https://www.exploit-db.com/google-hacking-database?author=10095">Exploit-DB GHDB</a>
-    <br>
-    <br>
-    EdgeOS instances for Ubiquiti devices
-    <br>
+    <h3>EdgeOS instances for Ubiquiti devices</h3>
     <code>intitle:"EdgeOS" intext:"Please login"</code>
     <br>
     Clickable: <a href="https://www.google.com/search?client=firefox-b-d&channel=trow&q=intitle%3A%22EdgeOS%22+intext%3A%22Please+login%22">intitle:"EdgeOS" intext:"Please login"</a>
-    <br>
-    <br>
-    Brocade switches
+    <h3>Brocade switches</h3>
     <code>intitle:"Web Management Login"</code>
     <br>
     Clickable: <a href="https://www.google.com/search?client=firefox-b-d&channel=trow&q=intitle%3A%22Web+Management+Login%22">intitle:"Web Management Login"</a>
-    <br>
-    <br>
-    .pl login portals
+    <h3>.pl login portals</h3>
     <code>inurl:cgi/login.pl</code>
     <br>
-     Clickable: <a href="https://www.google.com/search?client=firefox-b-d&channel=trow&q=inurl%3Acgi%2Flogin.pl">inurl:cgi/login.pl</a>
-    <br>
-    <br>
-    Matrix Science database Instances
+    Clickable: <a href="https://www.google.com/search?client=firefox-b-d&channel=trow&q=inurl%3Acgi%2Flogin.pl">inurl:cgi/login.pl</a>
+    <h3>Matrix Science database Instances</h3>
     <code>inurl:cgi/login.pl intext:"Matrix Science"</code>
     <br>
     Clickable: <a href="https://www.google.com/search?client=firefox-b-d&channel=trow&q=inurl%3Acgi%2Flogin.pl+intext%3A%22Matrix+Science%22">inurl:cgi/login.pl intext:"Matrix Science"</a>
-    <br>
-    <br>
-    <h3>Shodan queries</h3>
-    EdgeOS instances for Ubiquiti devices
+    <h2>Shodan queries</h2>
+    <h3>EdgeOS instances for Ubiquiti devices</h3>
     <code>http.favicon.hash:-1677255344</code>
     <br>
     Clickable: <a href="https://www.shodan.io/search?query=http.favicon.hash%3A-1677255344">http.favicon.hash:-1677255344</a>
-    <br>
-    <br>
-    Infoblox login portals
+    <h3>Infoblox login portals</h3>
     <code>http.favicon.hash:-195335685</code>
     <br>
     Clickable: <a href="https://www.shodan.io/search?query=http.favicon.hash%3A-195335685">http.favicon.hash:-195335685</a>
-    <br>
-    <br>
-    Brocade switches
+    <h3>Brocade switches</h3>
     <code>http.title:"Web Management Login"</code>
     <br>
     Clickable: <a href="https://www.shodan.io/search?query=http.title%3A%22Web+Management+Login%22">http.title:"Web Management Login"</a>
