--- a/osint/index.html
+++ b/osint/index.html
@@ -12,7 +12,7 @@ title: OSINT
             <li><a href="https://shodan.io">Shodan</a></li>
         </ul>
     <p>
-        <a href="https://shodan.io">Shodan</a> is free, but it is very limited in the "free" mode. To really unlock the searchability aspect, you should sign up for a free account. If you want to search a LOT, I would recommend buying a membership.
+        <a href="https://shodan.io">Shodan</a> is free, but it is very limited without an account because you can't use filters. With a free membership, you can use filters, but are limited in the number of searches you can make. With a paid membership, you can make as many searches as you want (rate limited to 1 per second).
     </p>
     <h2>Google dorks</h2>
     <a href="https://www.exploit-db.com/google-hacking-database?author=10095">Exploit-DB GHDB</a>
