--- a/osint/index.html
+++ b/osint/index.html
@@ -14,7 +14,11 @@ title: OSINT
     <p>
         <a href="https://shodan.io">Shodan</a> is free, but it is very limited without an account because you can't use filters. With a free membership, you can use filters, but are limited in the number of searches you can make. With a paid membership, you can make as many searches as you want (rate limited to 1 per second).
     </p>
+
     <h2>Google dorks</h2>
+    <p>
+        These are dorks that I have submitted to Offensive Security and are published in the Google Hacking Database.
+    </p>
     <a href="https://www.exploit-db.com/google-hacking-database?author=10095">Exploit-DB GHDB</a>
     <h3>EdgeOS instances for Ubiquiti devices</h3>
     <code>intitle:"EdgeOS" intext:"Please login"</code>
@@ -24,15 +28,32 @@ title: OSINT
     <code>intitle:"Web Management Login"</code>
     <br>
     Clickable: <a href="https://www.google.com/search?client=firefox-b-d&channel=trow&q=intitle%3A%22Web+Management+Login%22">intitle:"Web Management Login"</a>
-    <h3>.pl login portals</h3>
+    <h3>Various .pl login portals</h3>
     <code>inurl:cgi/login.pl</code>
     <br>
     Clickable: <a href="https://www.google.com/search?client=firefox-b-d&channel=trow&q=inurl%3Acgi%2Flogin.pl">inurl:cgi/login.pl</a>
     <h3>Matrix Science database Instances</h3>
     <code>inurl:cgi/login.pl intext:"Matrix Science"</code>
     <br>
-    Clickable: <a href="https://www.google.com/search?client=firefox-b-d&channel=trow&q=inurl%3Acgi%2Flogin.pl+intext%3A%22Matrix+Science%22">inurl:cgi/login.pl intext:"Matrix Science"</a>
+    <h3>Various login portals</h3>
+    <code>inurl:cgi/login.pl</code>
+    <br>
+    Clickable: <a href="https://www.google.com/search?client=firefox-b-d&channel=trow&q=inurl%3Acgi%2Flogin.pl">inurl:cgi/login.pl intext:"Matrix Science"</a>
+    <h3>Web portals for Local Run Manager software from Illumina</h3>
+    <code>intitle:"Local Run Manager" intext:"Local Run Manager Version:"</code>
+    <br>
+    Clickable: <a href="https://www.google.com/search?q=intitle:%22Local%20Run%20Manager%22%20intext:%22Local%20Run%20Manager%20Version:%22"</a>
+    <h3>Web portals for Ricoh printers/copiers/multifunction machines</h3>
+    <code>inurl:webArch/mainFrame filetype:cgi intext:"Web Image Monitor"</code>
+    <br>
+    Clickable: <a href="https://www.google.com/search?q=inurl:webArch/mainFrame%20filetype:cgi%20intext:%22Web%20Image%20Monitor%22"</a>
+    <h3>Magento Admin Panels</h3>
+    <code>intitle:"Magento Admin" intext:"Log in to Admin Panel"</code>
+    <br>
+    Clickable: <a href="https://www.google.com/search?q=intitle%3A"Magento+Admin"+intext%3A"Log+in+to+Admin+Panel"&oq=intitle%3A"Magento+Admin"+intext%3A"Log+in+to+Admin+Panel""</a>
+
     <h2>Shodan queries</h2>
+
     <h3>EdgeOS instances for Ubiquiti devices</h3>
     <code>http.favicon.hash:-1677255344</code>
     <br>
@@ -45,4 +66,8 @@ title: OSINT
     <code>http.title:"Web Management Login"</code>
     <br>
     Clickable: <a href="https://www.shodan.io/search?query=http.title%3A%22Web+Management+Login%22">http.title:"Web Management Login"</a>
+    <h3>WebMin vulnerable to CVE-2019-15107</h3>
+    <code>MiniServ/1.890 OR MiniServ/1.900 OR MiniServ/1.910 OR MiniServ/1.920</code>
+    <br>
+    Clickable: <a href="https://www.shodan.io/search?query=MiniServ%2F1.890+OR+MiniServ%2F1.900+OR+MiniServ%2F1.910+OR+MiniServ%2F1.920">http.title:"Web Management Login"</a>
 </div>
