single quote URL

--- a/osint/index.html
+++ b/osint/index.html
@@ -50,7 +50,7 @@ title: OSINT
     <h3>Magento Admin Panels</h3>
     <code>intitle:"Magento Admin" intext:"Log in to Admin Panel"</code>
     <br>
-    Clickable: <a href="https://www.google.com/search?q=intitle%3A"Magento+Admin"+intext%3A"Log+in+to+Admin+Panel"&oq=intitle%3A"Magento+Admin"+intext%3A"Log+in+to+Admin+Panel""</a>
+    Clickable: <a href='https://www.google.com/search?q=intitle%3A"Magento+Admin"+intext%3A"Log+in+to+Admin+Panel"&oq=intitle%3A"Magento+Admin"+intext%3A"Log+in+to+Admin+Panel"'</a>
 
     <h2>Shodan queries</h2>
 
