--- a/osint/index.html
+++ b/osint/index.html
@@ -23,34 +23,31 @@ title: OSINT
     <h3>EdgeOS instances for Ubiquiti devices</h3>
     <code>intitle:"EdgeOS" intext:"Please login"</code>
     <br>
-    Clickable: <a href="https://www.google.com/search?client=firefox-b-d&channel=trow&q=intitle%3A%22EdgeOS%22+intext%3A%22Please+login%22">intitle:"EdgeOS" intext:"Please login"</a>
+    Clickable: <a href="https://www.google.com/search?q=intitle%3A%22EdgeOS%22+intext%3A%22Please+login%22">intitle:"EdgeOS" intext:"Please login"</a>
     <h3>Brocade switches</h3>
     <code>intitle:"Web Management Login"</code>
     <br>
-    Clickable: <a href="https://www.google.com/search?client=firefox-b-d&channel=trow&q=intitle%3A%22Web+Management+Login%22">intitle:"Web Management Login"</a>
+    Clickable: <a href="https://www.google.com/search?q=intitle%3A%22Web+Management+Login%22">intitle:"Web Management Login"</a>
     <h3>Various .pl login portals</h3>
     <code>inurl:cgi/login.pl</code>
     <br>
-    Clickable: <a href="https://www.google.com/search?client=firefox-b-d&channel=trow&q=inurl%3Acgi%2Flogin.pl">inurl:cgi/login.pl</a>
+    Clickable: <a href="https://www.google.com/search?q=inurl%3Acgi%2Flogin.pl">inurl:cgi/login.pl</a>
     <h3>Matrix Science database Instances</h3>
     <code>inurl:cgi/login.pl intext:"Matrix Science"</code>
     <br>
-    <h3>Various login portals</h3>
-    <code>inurl:cgi/login.pl</code>
-    <br>
-    Clickable: <a href="https://www.google.com/search?client=firefox-b-d&channel=trow&q=inurl%3Acgi%2Flogin.pl">inurl:cgi/login.pl intext:"Matrix Science"</a>
+    Clickable: <a href="https://www.google.com/search?q=inurl%3Acgi%2Flogin.pl">inurl:cgi/login.pl intext:"Matrix Science"</a>
     <h3>Web portals for Local Run Manager software from Illumina</h3>
     <code>intitle:"Local Run Manager" intext:"Local Run Manager Version:"</code>
     <br>
-    Clickable: <a href="https://www.google.com/search?q=intitle:%22Local%20Run%20Manager%22%20intext:%22Local%20Run%20Manager%20Version:%22"</a>
+    Clickable: <a href="https://www.google.com/search?q=intitle:%22Local%20Run%20Manager%22%20intext:%22Local%20Run%20Manager%20Version:%22">intitle:"Local Run Manager" intext:"Local Run Manager Version:"</a>
     <h3>Web portals for Ricoh printers/copiers/multifunction machines</h3>
     <code>inurl:webArch/mainFrame filetype:cgi intext:"Web Image Monitor"</code>
     <br>
-    Clickable: <a href="https://www.google.com/search?q=inurl:webArch/mainFrame%20filetype:cgi%20intext:%22Web%20Image%20Monitor%22"</a>
+    Clickable: <a href="https://www.google.com/search?q=inurl:webArch/mainFrame%20filetype:cgi%20intext:%22Web%20Image%20Monitor%22">inurl:webArch/mainFrame filetype:cgi intext:"Web Image Monitor"</a>
     <h3>Magento Admin Panels</h3>
     <code>intitle:"Magento Admin" intext:"Log in to Admin Panel"</code>
     <br>
-    Clickable: <a href='https://www.google.com/search?q=intitle%3A"Magento+Admin"+intext%3A"Log+in+to+Admin+Panel"&oq=intitle%3A"Magento+Admin"+intext%3A"Log+in+to+Admin+Panel"'</a>
+    Clickable: <a href="https://www.google.com/search?q=intitle%3A%22Magento+Admin%22+intext%3A%22Log+in+to+Admin+Panel%22&oq=intitle%3A%22Magento+Admin%22+intext%3A%22Log+in+to+Admin+Panel%22">intitle:"Magento Admin" intext:"Log in to Admin Panel"</a>
 
     <h2>Shodan queries</h2>
 
