--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: M. Cory Billington
 ---
 <div class="blurb">
-        <h1>Cory Billington</h1>
-	<p>sysadmin by day, linux/security geek most other times...<br>
+        <h1>M. Cory Billington</h1>
+	<p>sysadmin turned pentester...<br>
 	</p>
 </div>
