--- a/research/index.html
+++ b/research/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Research
 ---
 <div class="about">
-    <h1>Some of my research</h1>
+    <h1>CVE's, Research, etc</h1>
     <h4>[CVE-2020-28328] SuiteCRM: Remote Code Execution (Authenticated)</h4>
     <ul>
         <li><a href="https://github.com/mcorybillington/SuiteCRM-RCE">My writeup</a></li>
