Change font color and link CVE's

--- a/research/index.html
+++ b/research/index.html
@@ -4,12 +4,12 @@ title: Research
 ---
 <div class="about">
     <h1>CVE's, Research, etc</h1>
-    <h4>[CVE-2020-28328] SuiteCRM: Remote Code Execution (Authenticated)</h4>
+    <p><a href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-28328">[CVE-2020-28328]</a> SuiteCRM: Remote Code Execution (Authenticated)</p>
     <ul>
         <li><a href="https://github.com/mcorybillington/SuiteCRM-RCE">My writeup</a></li>
         <li><a href="https://www.exploit-db.com/exploits/49001">Exploit-DB PoC</a></li>
     </ul>
-    <h4>[CVE-2020-4002] VMWare SD-WAN Orchestrator: Unsafe handling of system parameters</h4>
+    <p><a href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-4002">[CVE-2020-4002]</a> VMWare SD-WAN Orchestrator: Unsafe handling of system parameters</p>
     <ul>
         <li><a href="https://www.vmware.com/security/advisories/VMSA-2020-0025.html">VMWare security advisory</a></li>
     </ul>
