Fix vendor typo

--- a/research/index.html
+++ b/research/index.html
@@ -9,8 +9,8 @@ title: Research
         <li><a href="https://github.com/mcorybillington/SuiteCRM-RCE">My writeup</a></li>
         <li><a href="https://www.exploit-db.com/exploits/49001">Exploit-DB PoC</a></li>
     </ul>
-    <p><a href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-4002">[CVE-2020-4002]</a> VMWare SD-WAN Orchestrator: Unsafe handling of system parameters</p>
+    <p><a href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-4002">[CVE-2020-4002]</a> VMware SD-WAN Orchestrator: Unsafe handling of system parameters</p>
     <ul>
-        <li><a href="https://www.vmware.com/security/advisories/VMSA-2020-0025.html">VMWare security advisory</a></li>
+        <li><a href="https://www.vmware.com/security/advisories/VMSA-2020-0025.html">VMware security advisory</a></li>
     </ul>
 </div>
