Change cert layout

--- a/certifications/index.html
+++ b/certifications/index.html
@@ -4,12 +4,12 @@ title: Certifications
 ---
 <div class="about">
     <h2>Certifications</h2>
-    <p><a href="https://www.youracclaim.com/badges/2352083f-2957-4c8d-88db-5df6279b61da">Offensive Security Certified Professional (OSCP)</a></p>
-    <ul>
-        <li><a href="https://www.offensive-security.com/pwk-oscp/">About OSCP</a></li>
-    </ul>
-    <p><a href="https://www.youracclaim.com/badges/ab2933bd-5373-443f-b6fe-6a0608ecbe6b">Offensive Security Web Expert (OSWE)</a></p>
-    <ul>
-        <li><a href="https://www.offensive-security.com/awae-oswe/">About OSWE</a></li>
-    </ul>
+    <p>
+        <a href="https://www.offensive-security.com/pwk-oscp/">Offensive Security Certified Professional (OSCP)</a>:
+        <a href="https://www.youracclaim.com/badges/2352083f-2957-4c8d-88db-5df6279b61da">Verify my OSCP cert</a>
+    </p>
+    <p>
+        <a href="https://www.offensive-security.com/awae-oswe/">Offensive Security Web Expert (OSWE)</a>:
+        <a href="https://www.youracclaim.com/badges/ab2933bd-5373-443f-b6fe-6a0608ecbe6b">Verify my OSWE cert</a>
+    </p>
 </div>
